# automated-traffic-detection-project

./: README.md
traffic-violation-cv/: CONCEPT_NOTE.md  README.md  pyproject.toml
traffic-violation-cv/backend/: app.py  config.py  db.py
traffic-violation-cv/backend/pipeline/: annotate.py  detect.py  engine.py  plate.py  preprocess.py  restore.py  types.py
traffic-violation-cv/backend/pipeline/violations/: __init__.py  base.py  riders.py  road.py  traffic.py
traffic-violation-cv/data/: detection_gt.json  ground_truth.json
traffic-violation-cv/docs/: AutoTraffic_Vision.pptx  PRESENTATION.md  build_pptx.py  slides.html
traffic-violation-cv/frontend/templates/: _records_table.html  _result.html  analytics.html  base.html  detail.html  index.html  records.html
traffic-violation-cv/scripts/: evaluate.py  fetch_samples.py  run_cli.py
traffic-violation-cv/tests/: test_pipeline.py
